Added images and CSS.
Co-authored-by: Aaron Mejia <aaron.mejia8484@gmail.com>
Co-authored-by: Daisy Orozco <daisyyy.ob@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <link href="styles.css" rel="stylesheet" text="text/css">
+  <link href="css/styles.css" rel="stylesheet" text="text/css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,12 +10,44 @@
 </head>
 
 <body>
-  <h1>Teddy's Animal Rescue</h1>
+  <h1>ATD's Animal Rescue</h1>
 
-  <ul>
-    <li></li>
+  <div class="animal1">
+    <h2>Header</h2>
+    <img src="img\weim.jfif" alt="weimeraner" />
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias magni placeat veniam quo soluta pariatur,
+      beatae asperiores neque. Laboriosam est, dignissimos labore expedita vero odio provident cupiditate sint placeat
+      consequatur.</p>
+    <h3>Facts about [animal]</h3>
+    <ul>
+      <li>Fact1</li>
+      <li>Fact2</li>
+      <li>Fact3</li>
+    </ul>
+  </div>
 
-  </ul>
+  <div class="animal2">
+    <h2>Header</h2>
+    <img src="img\cat.jfif" alt="weimeraner" />
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati temporibus ducimus consequatur iste dicta qui
+      perspiciatis hic! Qui expedita asperiores odit suscipit tempore in voluptas et quibusdam nihil, delectus quo?</p>
+    <ul>
+      <li>Fact1</li>
+      <li>Fact2</li>
+      <li>Fact3</li>
+    </ul>
+  </div>
+
+  <div class="animal3">
+    <h2>Header</h2>
+    <img src="img\tortoise.jfif" alt="weimeraner" />
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat totam illum consequatur, doloribus dolore
+      corporis ipsa natus alias unde earum facere? Delectus, commodi! Similique iure harum recusandae dignissimos minima
+      architecto.</p>
+    <ul>
+      <li></li>
+    </ul>
+  </div>
 
 </body>
 
