Show a section featuring challenging pets and provide info on the 3 main pets.
Co-authored-by: Aaron Mejia <aaron.mejia8484@gmail.com>
Co-authored-by: Daisy Orozco <daisyyy.ob@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,48 +6,73 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Animal Shelter</title>
+  <title>ATD's Animal Rescue</title>
 </head>
 
 <body>
   <h1>ATD's Animal Rescue</h1>
+  <h3 class="welcomeMessage">Adopt an animal today!</h3>
 
   <div class="animal1">
-    <h2>Header</h2>
+    <h2>Dogs</h2>
     <img src="img\weim.jfif" alt="weimeraner" />
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias magni placeat veniam quo soluta pariatur,
-      beatae asperiores neque. Laboriosam est, dignissimos labore expedita vero odio provident cupiditate sint placeat
-      consequatur.</p>
-    <h3>Facts about [animal]</h3>
-    <ul>
-      <li>Fact1</li>
-      <li>Fact2</li>
-      <li>Fact3</li>
+    <p>Throughout history and across cultures, dogs have played crucial roles in various roles, including as working
+      animals, search and rescue partners, therapy animals, and loyal family pets. Their diverse abilities and
+      adaptability have contributed to their widespread popularity as pets worldwide.</p>
+    <h3>Facts About Dogs</h3>
+    <ul class="dogBulletpoints">
+      <li>Dogs have a sense of smell that is 40 times better than humans.</li>
+      <li>Dogs can learn over 100 words and gestures.</li>
+      <li>Dogs are social animals that love to be around people.</li>
     </ul>
   </div>
 
   <div class="animal2">
-    <h2>Header</h2>
+    <h2>Cats</h2>
     <img src="img\cat.jfif" alt="weimeraner" />
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati temporibus ducimus consequatur iste dicta qui
-      perspiciatis hic! Qui expedita asperiores odit suscipit tempore in voluptas et quibusdam nihil, delectus quo?</p>
-    <ul>
-      <li>Fact1</li>
-      <li>Fact2</li>
-      <li>Fact3</li>
+    <p>Cats come in various breeds, each with its own unique characteristics in terms of size, coat type, and
+      personality. They are often kept as pets for their affectionate nature, although individual cats can vary widely
+      in their social behaviors.</p>
+    <h3>Facts About Cats</h3>
+    <ul class="catBulletpoints">
+      <li>Cats have the largest eyes relative to their head size of any mammal.</li>
+      <li>Cats can jump up to six times their own body length.</li>
+      <li>Cats have 32 muscles in each ear.</li>
     </ul>
   </div>
 
   <div class="animal3">
-    <h2>Header</h2>
+    <h2>Tortoises</h2>
     <img src="img\tortoise.jfif" alt="weimeraner" />
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat totam illum consequatur, doloribus dolore
-      corporis ipsa natus alias unde earum facere? Delectus, commodi! Similique iure harum recusandae dignissimos minima
-      architecto.</p>
-    <ul>
-      <li></li>
+    <p>Tortoises are reptiles belonging to the Testudinidae family. Unlike turtles, they are primarily land-dwelling and
+      have adapted to life in diverse habitats, ranging from deserts to grasslands. These creatures are characterized by
+      their large, sturdy shells that provide protection.</p>
+    <h3>Facts About Tortoises</h3>
+    <ul class="tortoiseBulletpoints">
+      <li>Tortoises are reptiles, and they are closely related to turtles.</li>
+      <li>Tortoises are very long-lived animals.</li>
+      <li>Tortoises are herbivores, and their diet consists mainly of grasses, weeds, and fruits.</li>
     </ul>
   </div>
+
+  <br>
+  <br>
+  <br>
+  <div class="toughPets">
+    <h3>Interested in a challenging pet? Checkout some of our critters who are still looking for their forever home!
+    </h3>
+    <br>
+    <br>
+    <ul>
+      <li class="ridgeback">Norwegian Ridgeback 🐉</li>
+      <img src="img\ridgeback.jfif" />
+      <li class="anglerFish">Angler Fish 🐡</li>
+      <img src="img\angler_fish.jfif" />
+      <li class="lochness">Loch Ness Monster 🦕🐉🏞🗻🚣</li>
+      <img src="img\nessy.jfif" />
+    </ul>
+  </div>
+
 
 </body>
 
